# pitch-doctor

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  render.yaml
.github/workflows/: ci.yml
examples/: example.com.html  example.com.json
pitch_doctor/: __init__.py  browser_launch.py  cli.py  models.py  scoring.py
pitch_doctor/checks/: __init__.py  accessibility.py  analytics_tracking.py  base.py  broken_links.py  compliance.py  contact_friction.py  load_speed.py  mobile_rendering.py  mobile_ux_advanced.py  outdated_signals.py  performance_optimization.py  reachability.py  runner.py  search_visibility.py  security_headers.py  seo_advanced.py  ssl_check.py  user_experience.py
pitch_doctor/i18n/: __init__.py  en.json  es.json  fr.json  zh.json
pitch_doctor/report/: __init__.py  builder.py  pdf_export.py
pitch_doctor/report/templates/: report.html.jinja
pitch_doctor/web/: __init__.py  app.py  templates.py
tests/: conftest.py  test_check_broken_links.py  test_check_contact_friction.py  test_check_load_speed.py  test_check_mobile_rendering.py  test_check_outdated_signals.py  test_check_reachability.py  test_check_search_visibility.py  test_check_ssl.py  test_i18n.py  test_runner_helpers.py  test_scoring.py
tests/fixtures/: bad_site.html  good_site.html
